Wave 5: low-risk polish (L5, L6)
- L5: create the Resend client once (@PostConstruct) instead of per email send,
  so its HTTP client can pool connections.
- L6: HealthController uses Map.of; .toList() replaces Collectors.toList() in
  GooglePlaceSearchService and GatheringSpotRepository (drops the Collectors imports).

L8 (dev profile) intentionally skipped: a FIREBASE_ENABLED=false profile cannot
boot until the deferred half of C4 (conditional Firebase beans) is done, so it is
not safe to land standalone.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>